# ParseElectrData

./: .gitignore  build.bat  build.py  gui.py  main.py  plot.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: build.yml
