[project]
name = "parseelectrdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorlog>=6.9.0",
    "cx-freeze>=7.2.10",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psutil>=7.0.0",
    "psutils>=3.3.9",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "sv-ttk>=2.6.0",
    "tkcalendar>=1.6.1",
    "ttkthemes>=3.2.2",
]
